Fixed an issue with ingredient images being displayed too big (full width). Made layout of Home page  and Recipe Details page more consistent in image sizes and aligned to the left instead of centered.

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,9 @@
 
 .search-results {
-  max-width: 500px;       
-  margin: 0 auto;         
+  max-width: 420px;       
+  margin: 0;         
   width: 100%;
-  padding: 0 12px;        
+  padding: 0;        
 }
 
 
